tests/rosetta/out/C/bifid-cipher.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:51Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:51Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
typedef struct {
  int e;
  map_string d;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int square_to_maps(int square) {
  map_string_int tmp1 = map_string_int_create(0);
  int emap = tmp1;
  map_string_int tmp2 = map_string_int_create(0);
  map_string dmap = tmp2;
  int x = 0;
  while (x < square.len) {
    int row = square.data[x];
    int y = 0;
    while (y < row.len) {
      const char *ch = row.data[y];
      list_int tmp3 = list_int_create(2);
      tmp3.data[0] = x;
      tmp3.data[1] = y;
      list_int tmp4 = list_int_create(2);
      tmp4.data[0] = x;
      tmp4.data[1] = y;
      emap.data[ch] = tmp4;
      char *tmp5 = _str(x);
      char *tmp6 = concat_string(tmp5, ",");
      char *tmp7 = _str(y);
      char *tmp8 = concat_string(tmp6, tmp7);
      char *tmp9 = _str(x);
      char *tmp10 = concat_string(tmp9, ",");
      char *tmp11 = _str(y);
      char *tmp12 = concat_string(tmp10, tmp11);
      dmap.data[tmp12] = ch;
      y = y + 1;
    }
    x = x + 1;
  }
  return (tmp_item_t){.e = emap, .d = dmap};
}

const char *remove_space(char *text, int emap) {
  const char *s = upper(text);
  const char *out = "";
  int i = 0;
  while (i < strlen(s)) {
    char *tmp13 = slice_string(s, i, i + 1);
    const char *ch = tmp13;
    if ((strcmp(ch, " ") != 0) && ch in emap) {
      char *tmp14 = concat_string(out, ch);
      out = tmp14;
    }
    i = i + 1;
  }
  return out;
}

const char *encrypt(char *text, int emap, int dmap) {
  text = remove_space(text, emap);
  list_int row0 = list_int_create(0);
  list_int row1 = list_int_create(0);
  int i = 0;
  while (i < strlen(text)) {
    char *tmp15 = slice_string(text, i, i + 1);
    const char *ch = tmp15;
    list_int xy = emap.data[ch];
    row0 = 0;
    row1 = 0;
    i = i + 1;
  }
  for (int tmp16 = 0; tmp16 < row1.len; tmp16++) {
    int v = row1.data[tmp16];
    int tmp17_data[1];
    list_int tmp17 = {1, tmp17_data};
    tmp17.data[0] = v;
    list_int tmp18 = concat_list_int(row0, tmp17);
    row0 = tmp18;
  }
  const char *res = "";
  int j = 0;
  while (j < row0.len) {
    char *tmp19 = _str(row0.data[j]);
    char *tmp20 = concat_string(tmp19, ",");
    char *tmp21 = _str(row0.data[j + 1]);
    char *tmp22 = concat_string(tmp20, tmp21);
    const char *key = tmp22;
    res = res + dmap.data[key];
    j = j + 2;
  }
  return res;
}

const char *decrypt(char *text, int emap, int dmap) {
  text = remove_space(text, emap);
  list_int coords = list_int_create(0);
  int i = 0;
  while (i < strlen(text)) {
    char *tmp23 = slice_string(text, i, i + 1);
    const char *ch = tmp23;
    list_int xy = emap.data[ch];
    coords = 0;
    int tmp24_data[1];
    list_int tmp24 = {1, tmp24_data};
    tmp24.data[0] = xy.data[1];
    list_int tmp25 = concat_list_int(coords, tmp24);
    coords = tmp25;
    i = i + 1;
  }
  double half = ((double)coords.len) / ((double)2);
  list_int k1 = list_int_create(0);
  list_int k2 = list_int_create(0);
  int idx = 0;
  while (idx < half) {
    k1 = 0;
    idx = idx + 1;
  }
  while (idx < coords.len) {
    k2 = 0;
    idx = idx + 1;
  }
  const char *res = "";
  int j = 0;
  while (j < half) {
    char *tmp26 = _str(k1.data[j]);
    char *tmp27 = concat_string(tmp26, ",");
    char *tmp28 = _str(k2.data[j]);
    char *tmp29 = concat_string(tmp27, tmp28);
    const char *key = tmp29;
    res = res + dmap.data[key];
    j = j + 1;
  }
  return res;
}

int main() {
  list_string squareRosetta = list_string_create(5);
  squareRosetta.data[0] = "A";
  squareRosetta.data[1] = "B";
  squareRosetta.data[2] = "C";
  squareRosetta.data[3] = "D";
  squareRosetta.data[4] = "E";
  list_string squareRosetta = list_string_create(5);
  squareRosetta.data[0] = "F";
  squareRosetta.data[1] = "G";
  squareRosetta.data[2] = "H";
  squareRosetta.data[3] = "I";
  squareRosetta.data[4] = "K";
  list_string squareRosetta = list_string_create(5);
  squareRosetta.data[0] = "L";
  squareRosetta.data[1] = "M";
  squareRosetta.data[2] = "N";
  squareRosetta.data[3] = "O";
  squareRosetta.data[4] = "P";
  list_string squareRosetta = list_string_create(5);
  squareRosetta.data[0] = "Q";
  squareRosetta.data[1] = "R";
  squareRosetta.data[2] = "S";
  squareRosetta.data[3] = "T";
  squareRosetta.data[4] = "U";
  list_string squareRosetta = list_string_create(5);
  squareRosetta.data[0] = "V";
  squareRosetta.data[1] = "W";
  squareRosetta.data[2] = "X";
  squareRosetta.data[3] = "Y";
  squareRosetta.data[4] = "Z";
  list_string squareRosetta = list_string_create(5);
  squareRosetta.data[0] = "J";
  squareRosetta.data[1] = "1";
  squareRosetta.data[2] = "2";
  squareRosetta.data[3] = "3";
  squareRosetta.data[4] = "4";
  list_int squareRosetta_data[] = {squareRosetta, squareRosetta, squareRosetta,
                                   squareRosetta, squareRosetta, squareRosetta};
  list_list_int squareRosetta = {6, squareRosetta_data};
  list_int squareRosetta = squareRosetta;
  list_string squareWikipedia = list_string_create(5);
  squareWikipedia.data[0] = "B";
  squareWikipedia.data[1] = "G";
  squareWikipedia.data[2] = "W";
  squareWikipedia.data[3] = "K";
  squareWikipedia.data[4] = "Z";
  list_string squareWikipedia = list_string_create(5);
  squareWikipedia.data[0] = "Q";
  squareWikipedia.data[1] = "P";
  squareWikipedia.data[2] = "N";
  squareWikipedia.data[3] = "D";
  squareWikipedia.data[4] = "S";
  list_string squareWikipedia = list_string_create(5);
  squareWikipedia.data[0] = "I";
  squareWikipedia.data[1] = "O";
  squareWikipedia.data[2] = "A";
  squareWikipedia.data[3] = "X";
  squareWikipedia.data[4] = "E";
  list_string squareWikipedia = list_string_create(5);
  squareWikipedia.data[0] = "F";
  squareWikipedia.data[1] = "C";
  squareWikipedia.data[2] = "L";
  squareWikipedia.data[3] = "U";
  squareWikipedia.data[4] = "M";
  list_string squareWikipedia = list_string_create(5);
  squareWikipedia.data[0] = "T";
  squareWikipedia.data[1] = "H";
  squareWikipedia.data[2] = "Y";
  squareWikipedia.data[3] = "V";
  squareWikipedia.data[4] = "R";
  list_string squareWikipedia = list_string_create(5);
  squareWikipedia.data[0] = "J";
  squareWikipedia.data[1] = "1";
  squareWikipedia.data[2] = "2";
  squareWikipedia.data[3] = "3";
  squareWikipedia.data[4] = "4";
  list_int squareWikipedia_data[] = {squareWikipedia, squareWikipedia,
                                     squareWikipedia, squareWikipedia,
                                     squareWikipedia, squareWikipedia};
  list_list_int squareWikipedia = {6, squareWikipedia_data};
  list_int squareWikipedia = squareWikipedia;
  const char *textRosetta = "0ATTACKATDAWN";
  const char *textWikipedia = "FLEEATONCE";
  const char *textTest = "The invasion will start on the first of January";
  int maps = square_to_maps(squareRosetta);
  int emap = maps.data["e"];
  int dmap = maps.data["d"];
  printf("from Rosettacode\n");
  char *tmp30 = concat_string("original:\t ", textRosetta);
  printf("%s\n", tmp30);
  const char *s = encrypt(textRosetta, emap, dmap);
  char *tmp31 = concat_string("codiert:\t ", s);
  printf("%s\n", tmp31);
  s = decrypt(s, emap, dmap);
  char *tmp32 = concat_string("and back:\t ", s);
  printf("%s\n", tmp32);
  maps = square_to_maps(squareWikipedia);
  emap = maps.data["e"];
  dmap = maps.data["d"];
  printf("from Wikipedia\n");
  char *tmp33 = concat_string("original:\t ", textWikipedia);
  printf("%s\n", tmp33);
  s = encrypt(textWikipedia, emap, dmap);
  char *tmp34 = concat_string("codiert:\t ", s);
  printf("%s\n", tmp34);
  s = decrypt(s, emap, dmap);
  char *tmp35 = concat_string("and back:\t ", s);
  printf("%s\n", tmp35);
  maps = square_to_maps(squareWikipedia);
  emap = maps.data["e"];
  dmap = maps.data["d"];
  printf("from Rosettacode long part\n");
  char *tmp36 = concat_string("original:\t ", textTest);
  printf("%s\n", tmp36);
  s = encrypt(textTest, emap, dmap);
  char *tmp37 = concat_string("codiert:\t ", s);
  printf("%s\n", tmp37);
  s = decrypt(s, emap, dmap);
  char *tmp38 = concat_string("and back:\t ", s);
  printf("%s\n", tmp38);
}

int main() {
  main();
  return 0;
}
